# twilight-struggle-ai

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  Snakefile  Snakefile.data  Snakefile.ppo  experiments.yaml  experiments_ppo.yaml  head-architecture.md  pyproject.toml  temperature-nash.md  trunk-architecture.md  wandb.md
.claude/: LICENSE.ching-kuo.claude-codex  settings.json  settings.local.example.json
.claude/agents/: DECISIONS.md  architecture-skeptic.md  bg-codex-analyzer.md  bg-codex-implementer.md  bg-rules-lawyer.md  codex-implementer._md  cpp-engine-builder.md  dataset-plumber.md  eval-referee.md  policy-opt-codex-haiku.md  pytorch-trainer.md  replay-forensics.md  rules-lawyer.md
.claude/hooks/: README.md  check_binary_freshness.py  log_config_change.py  prevent_dangerous_bash.py  prevent_protected_writes.py  run-targeted-checks.py
.claude/plan/: heuristic-teacher-mode.md  ismcts-vs-model.md  jit-benchmark.md  jsd-probe-eval.md  k-sample-influence-mcts.md  mcts-perf-deepdive.md  policy-stats-and-oom.md  restartable-benchmark.md  selfplay-ppo-rollout.md  subframe-row-emission.md
archive/mcts_batched_fast/: CMakeLists.txt  README.md
bindings/: CMakeLists.txt  tscore_bindings.cpp
cpp/: README.md
cpp/experimental/: AGENTS.md  CMakeLists.txt  callback_script.cpp  callback_script.hpp  evaluator.cpp  evaluator.hpp  logging.hpp  planner.cpp  planner.hpp  profile.cpp  profile.hpp  pybind_module.cpp  runner.cpp  runner.hpp  search.cpp  search.hpp  types.hpp
cpp/experimental/tools/: heuristic_matchup.cpp  heuristic_selfplay.cpp  heuristic_spsa.cpp
cpp/tools/: CMakeLists.txt  benchmark_matchup.cpp  cat_c_smoke.cpp  collect_mcts_games_jsonl.cpp  collect_selfplay_rows_jsonl.cpp  collect_trace_jsonl.cpp  compare_initial_headline.py  compare_initial_setup.py  compare_native_python.py  dump_native_setup.cpp  event_parity_smoke.cpp  export_baseline_to_torchscript.py  initial_headline_choice.cpp  learned_matchup.cpp  loop_mechanics_smoke.cpp  numpy_bounded_probe.cpp  pcg64_smoke.cpp  run_native_collection.py  shuffle_stream_probe.cpp  smoke_native_runtime.py  test_human_openings_weights.cpp  ts_mcts_search.cpp
cpp/tscore/: CMakeLists.txt  adjacency.cpp  adjacency.hpp  card_properties.hpp  decision_frame.hpp  decode_helpers.hpp  dice.cpp  dice.hpp  dp_decoder.hpp  game_data.cpp  game_data.hpp  game_loop.cpp  game_loop.hpp  game_state.cpp  game_state.hpp  hand_knowledge.hpp  hand_ops.cpp  hand_ops.hpp  human_openings.hpp  ismcts.cpp  ismcts.hpp  learned_policy.cpp  learned_policy.hpp  legal_actions.cpp  legal_actions.hpp  mcts.cpp  mcts.hpp  mcts_batched.cpp  mcts_batched.hpp  mcts_search_impl.hpp  nn_features.cpp  nn_features.hpp  policies.cpp  policies.hpp  policy_callback.hpp  public_state.cpp  public_state.hpp  rng.cpp  rng.hpp  rule_queries.cpp  (+7 more)
docs/: architecture-refactoring.md  engine_bugs_ismcts_2026_04_12.md  event_scope.md  experiment_log_phase1.md  experiment_log_phase2.md  model_architecture_analysis.md  observation_interface.md  plan_pragmatic_heads.md  replay_grammar.md  running-experiments.md  saturation_analysis.md  spec_exploration_noise.md  spec_setup_influence.md  ts_rules_scoring.md  us_bias_analysis.md
experimental/: AGENTS.md  CLAUDE.md  FINDINGS.md  README.md  __init__.py
long-prompts/: README.md  brif02flj.txt  feedback-20260411.md  game_log_v55_seed3_T1.txt-analysis.md  heavy-git.md  heuristic-imbalance.md  inconsistent-moves.md  off-policy-architecture-ranking.md  pragmatic-head.md  principled-heuristic.md  v266_sc-selfplay-analysis.md
notebooks/: colab_train.ipynb
results/: ab_benchmark_full.json  ab_benchmark_tier1.json  arch_bench_results.txt  bc_dataset_and_arch_plan.md  bench_pipeline_log.txt  bench_v32_nash_vs_fixed.json  bench_v32_post_planb.json  bench_v32_v110_multiseed.json  bench_v34_peerpool_multiseed.json  bench_v73.json  bench_v73_cold.json  bench_v73_warm.json  bench_v74.json  bench_v76.json  bench_v78.json  bench_v79.json  bench_v82.json  bench_v86_both_sides.json  bench_v86_both_us.json  bench_v87.json  bench_v87_provenance.json  benchmark_all_checkpoints.json  benchmark_all_checkpoints.txt  benchmark_history.json  checkpoint_elo.json  checkpoint_override_v100_sc.txt.used  checkpoint_override_v132_sc.txt  checkpoint_override_v205_sc.txt.used  checkpoint_override_v219_sc.txt.used  checkpoint_override_v232_sc.txt.used  checkpoint_override_v27.txt.used  checkpoint_override_v290_sc.txt.used  checkpoint_override_v291_sc.txt.used  checkpoint_override_v306_sc.txt.used  checkpoint_override_v310_sc.txt.used  checkpoint_override_v54.txt.used  checkpoint_override_v72_sc.txt  checkpoint_override_v75_sc.txt.used  checkpoint_override_v77_sc.txt  codebase_duplication_audit.md  (+112 more)
scripts/: analyze_awr_results.py  analyze_human_defcon.py  analyze_human_games.py  analyze_session_costs.py  arch_sweep_awr.py  assemble_ppo_dataset.py  awr_best_arch_retrain.sh  awr_chain.sh  awr_fixed_engine_pipeline.sh  awr_to_ppo_warmstart.sh  backfill_wandb_history.py  bc_v32_fixed_engine.sh  bench_all_checkpoints.py  bench_and_selfplay_v86.sh  bench_bc_v32_fixed_multiseed.py  bench_cpp.sh  bench_gpu.py  bench_jit.py  bench_model_vs_model.py  bench_pipeline.sh  bench_resumable.py  bench_rollout_heuristic.py  bench_v32_nash_vs_fixed.py  bench_v32_post_planb.py  bench_v32_temperature_sweep.py  bench_v32_v110_multiseed.py  bench_v34_iter10.py  bench_v34_peerpool_multiseed.py  bench_v35_iter20.py  bench_v36_iter10.py  benchmark.py  benchmark_awr_checkpoint.py  benchmark_mcts_gpu_vs_cpu.py  benchmark_simple.py  benchmark_suite.py  benchmark_throughput.py  benchmark_vf_mcts.py  build_probe_set.py  build_proxy_eval.py  calibrate_value_head.py  (+138 more)
specs/: ismcts_batched.md
tests/cpp/: CMakeLists.txt  test_adjacency.cpp  test_card_choice_events.cpp  test_decode_helpers.cpp  test_experimental_heuristic.cpp  test_frame_parity.cpp  test_frame_regression.cpp  test_ismcts_regression.cpp  test_observation.cpp  test_public_state.cpp  test_subframe_logging.cpp
tests/cpp/fixtures/: README.md  gap001_china_card_headline.json  gap003_space_suppression.json
(+4387 files in other folders)
