[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsrl"
version = "0.1.0"
description = "Twilight Struggle Reinforcement Learning"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "polars>=0.20",
    "pyarrow>=14",
    "pydantic>=2.0",
    "numpy>=2.4.3",
    "pypdf>=6.9.2",
    "modal>=1.4.0",
    "kaggle>=1.8.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "wandb>=0.25.1",
    "graphifyy>=0.4.2",
]

[dependency-groups]
dev = [
    "pypdf>=6.9.2",
    "pytest>=7",
    "pytest-cov",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6",
    "ruff",
    "scipy>=1.17.1",
    "snakemake>=9.19.0",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.uv]
# Lock file is checked in for reproducibility.
# Use `uv sync` to install; `uv run` to execute scripts.

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
# -n auto: parallel workers (one per CPU), work-stealing load distribution.
# No module grouping needed — all tests are stateless pure functions.
# Workers are niced to avoid starving interactive processes (see conftest.py).
# Debugging override: uv run pytest -n 0   (or -p no:xdist)
addopts = "-q -n auto"
markers = [
    "serial: run in the serial worker (use for tests with shared filesystem state or ordering dependencies)",
    "slow: marks tests as slow (deselect with '-m not slow')",
]
